# cache_algorithms

./: .gitignore  README.md  run_pop_caching.sh  start.sh  start_algos.sh
alg/: CMakeLists.txt  arccache.h  fifocache.h  lfu.h  lru.h  lru_K.h  main.cpp  midpointlru.h  mqcache.h  pop_caching.h  snlru.h  twoqcache.h
opt/: CMakeLists.txt  main.cpp
src/: config.cfg  datasets.txt  out.txt  pre_push_start.sh  start.sh
src/alg/: CMakeLists.txt  lru_K.h  main.cpp  mqcache.h  pop_caching.h
src/alg/algorithms/: arccache.h  fifocache.h  lfu.h  lru.h  lru_K.h  lru_K_old.h  midpointlru.h  mqcache.h  pop_caching.h  snlru.h  twoqcache.h
src/alg/extra/: CMakeLists.txt  config.cpp  config.h  history_manager.cpp  history_manager.h  pre_push.cpp  pre_push.h  size_filter.cpp  size_filter.h
src/alg/include/: defs.h
src/opt/: main.cpp
test/: change_config.sh  sed_test.txt
