CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT(extra)

# set(CMAKE_AUTOMOC ON)
# set(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_CXX_FLAGS "-std=c++11 -O3 -Wall")

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB HEADER_FILES *.h)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
# ADD_LIBRARY(${PROJECT_NAME} ${SOURCE_FILES})
